# zim-prices

./: LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/: __init__.py  commodities.py  markets.py  prices.py
backend/app/api/v1/schemas/: commodity.py  market.py  price.py
backend/app/services/: ingestion_zmx.py
backend/tests/unit/: test_health.py  test_normalization.py
docs/: implementation_plan.md
scrapers/: pyproject.toml
scrapers/zim_prices_scrapers/: __init__.py
scrapers/zim_prices_scrapers/normalization/: contracts.py  units.py
scrapers/zim_prices_scrapers/orchestration/: jobs.py
scrapers/zim_prices_scrapers/sources/: zmx.py
