[project]
name = "zim-prices-backend"
version = "0.1.0"
description = "FastAPI backend for Zimbabwe daily commodity prices platform"
requires-python = ">=3.11"
authors = [
  { name = "Emmanuel Buruvuru" }
]

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
SQLAlchemy = "^2.0.0"
psycopg = { version = "^3.1.0", extras = ["binary"] }
alembic = "^1.13.0"
pydantic = "^2.7.0"
python-dotenv = "^1.0.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"